--- a/index.html
+++ b/index.html
@@ -1,39 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>我的博客</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>我的网站</title>
+    <style>
+        /* CSS 样式 */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        section {
+            padding: 20px;
+            margin: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="/">首页</a></li>
-        <li><a href="/blog">博客</a></li>
-        <li><a href="/about">关于</a></li>
-        <li><a href="/contact">联系我们</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+    <h1>欢迎来到我的网站</h1>
+</header>
 
-  <div class="container">
-    <div class="main">
-      <h1>欢迎来到我的博客</h1>
-      <div class="blog-posts">
-        <!-- 这里将来会动态地加载博客文章 -->
-      </div>
-    </div>
-    <div class="sidebar">
-      <h2>侧边栏</h2>
-      <p>这是侧边栏，您可以在这里放置额外的信息、链接或其他内容。</p>
-    </div>
-  </div>
+<nav>
+    <a href="#">首页</a> |
+    <a href="#">关于我们</a> |
+    <a href="#">服务</a> |
+    <a href="#">联系我们</a>
+</nav>
 
-  <footer>
-    <p>&copy; 2023 我的博客</p>
-  </footer>
+<section>
+    <h2>主要内容区域</h2>
+    <p>欢迎来到我们的网站！这里是一些示例内容。</p>
+    <img src="https://via.placeholder.com/400" alt="示例图片">
+    <p>更多内容可以添加在这里，例如表格、列表、视频等。</p>
+    <ul>
+        <li>项目一</li>
+        <li>项目二</li>
+        <li>项目三</li>
+    </ul>
+    <p>还可以添加联系表单：</p>
+    <form action="#">
+        <label for="name">姓名：</label>
+        <input type="text" id="name" name="name" required><br><br>
+        <label for="email">邮箱：</label>
+        <input type="email" id="email" name="email" required><br><br>
+        <label for="message">消息：</label><br>
+        <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+        <input type="submit" value="发送">
+    </form>
+</section>
+
+<footer>
+    <p>版权所有 &copy; 2023 我的网站</p>
+</footer>
+
+</body>
+</html>
 
   <script src="scripts.js"></script>
 </body>
