--- a/index.html
+++ b/index.html
@@ -41,6 +41,64 @@
             text-align: center;
             padding: 20px;
         }
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-gap: 20px;
+        }
+        .card {
+            background-color: #f0f0f0;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .card img {
+            width: 100%;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.7);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 10% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            border-radius: 5px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -56,35 +114,57 @@
     <a href="#">联系我们</a>
 </nav>
 
-<section>
-    <h2>主要内容区域</h2>
-    <p>欢迎来到我们的网站！这里是一些示例内容。</p>
-    <img src="https://via.placeholder.com/400" alt="示例图片">
-    <p>更多内容可以添加在这里，例如表格、列表、视频等。</p>
-    <ul>
-        <li>项目一</li>
-        <li>项目二</li>
-        <li>项目三</li>
-    </ul>
-    <p>还可以添加联系表单：</p>
-    <form action="#">
-        <label for="name">姓名：</label>
-        <input type="text" id="name" name="name" required><br><br>
-        <label for="email">邮箱：</label>
-        <input type="email" id="email" name="email" required><br><br>
-        <label for="message">消息：</label><br>
-        <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
-        <input type="submit" value="发送">
-    </form>
+<section class="grid-container">
+    <div class="card">
+        <h3>产品一</h3>
+        <img src="https://via.placeholder.com/250" alt="产品一">
+        <p>产品描述或相关信息。</p>
+        <button onclick="openModal('Product 1')">了解更多</button>
+    </div>
+    <div class="card">
+        <h3>产品二</h3>
+        <img src="https://via.placeholder.com/250" alt="产品二">
+        <p>产品描述或相关信息。</p>
+        <button onclick="openModal('Product 2')">了解更多</button>
+    </div>
+    <!-- 可以添加更多卡片 -->
 </section>
 
 <footer>
     <p>版权所有 &copy; 2023 我的网站</p>
 </footer>
 
-</body>
-</html>
+<!-- 模态框 -->
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2 id="modalTitle"></h2>
+        <p>这是模态框的内容。可以在这里展示详细信息、表单或其他内容。</p>
+    </div>
+</div>
 
-  <script src="scripts.js"></script>
+<script>
+    // JavaScript
+    function openModal(productName) {
+        var modal = document.getElementById("myModal");
+        var modalTitle = document.getElementById("modalTitle");
+        modal.style.display = "block";
+        modalTitle.innerHTML = productName;
+    }
+
+    function closeModal() {
+        var modal = document.getElementById("myModal");
+        modal.style.display = "none";
+    }
+
+    // Close modal on outside click
+    window.onclick = function(event) {
+        var modal = document.getElementById("myModal");
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
+
 </body>
 </html>
